[gd_scene load_steps=10 format=3 uid="uid://cenyt36m1l2n7"]

[ext_resource type="PackedScene" uid="uid://dccymvi3jqmpu" path="res://scenes/UI/radar.tscn" id="1_572hq"]
[ext_resource type="Script" path="res://scenes/UI/ui.gd" id="1_xfng3"]
[ext_resource type="Texture2D" uid="uid://c8omdry4sbhrj" path="res://graphics/pickups/CoinSpin.png" id="3_x2chr"]

[sub_resource type="Gradient" id="Gradient_kv5sg"]
offsets = PackedFloat32Array(0.630208)
colors = PackedColorArray(0.230315, 0.230315, 0.230315, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_amka2"]
gradient = SubResource("Gradient_kv5sg")

[sub_resource type="Gradient" id="Gradient_55l7f"]
colors = PackedColorArray(1, 0, 0, 1, 0, 1, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_y7sk2"]
gradient = SubResource("Gradient_55l7f")

[sub_resource type="AtlasTexture" id="AtlasTexture_6bw1h"]
atlas = ExtResource("3_x2chr")
region = Rect2(0, 0, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_cuiiv"]
font_size = 32
shadow_size = 0

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_xfng3")

[node name="Radar" parent="." instance=ExtResource("1_572hq")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -220.0
offset_right = 220.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="BatteryLevel" type="MarginContainer" parent="."]
offset_left = 24.0
offset_top = 16.0
offset_right = 288.0
offset_bottom = 64.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="BatteryBar" type="TextureProgressBar" parent="BatteryLevel"]
layout_mode = 2
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_amka2")
texture_progress = SubResource("GradientTexture1D_y7sk2")

[node name="CoinDisplay" type="HBoxContainer" parent="."]
offset_left = 32.0
offset_top = 72.0
offset_right = 88.0
offset_bottom = 117.0
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="CoinDisplay"]
layout_mode = 2
texture = SubResource("AtlasTexture_6bw1h")
expand_mode = 2

[node name="CoinCounter" type="Label" parent="CoinDisplay"]
layout_mode = 2
label_settings = SubResource("LabelSettings_cuiiv")
horizontal_alignment = 1
vertical_alignment = 1
